After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 673348 - e-web-app-utils: use LOG and g_warning instead of g_print
e-web-app-utils: use LOG and g_warning instead of g_print
Status: RESOLVED FIXED
Product: epiphany
Classification: Core
Component: General
unspecified
Other All
: Normal normal
: ---
Assigned To: Epiphany Maintainers
Epiphany Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-04-02 10:49 UTC by Diego Escalante Urrelo (not reading bugmail)
Modified: 2012-04-22 01:35 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
e-web-app-utils: use LOG and g_warning instead of g_print (1.57 KB, patch)
2012-04-02 10:49 UTC, Diego Escalante Urrelo (not reading bugmail)
committed Details | Review

Description Diego Escalante Urrelo (not reading bugmail) 2012-04-02 10:49:49 UTC
Messages for web applications are always printed. We should not clog the
default output.
Comment 1 Diego Escalante Urrelo (not reading bugmail) 2012-04-02 10:49:51 UTC
Created attachment 211124 [details] [review]
e-web-app-utils: use LOG and g_warning instead of g_print

https://bugzilla.gnome.org/show_bug.cgi?id=673271
Comment 2 Diego Escalante Urrelo (not reading bugmail) 2012-04-02 10:50:44 UTC
Well. Isn't git bz funny?

That bug url should obviously be to this bug.
Comment 3 Xan Lopez 2012-04-20 14:54:42 UTC
Review of attachment 211124 [details] [review]:

Yes.
Comment 4 Diego Escalante Urrelo (not reading bugmail) 2012-04-22 01:35:10 UTC
Attachment 211124 [details] pushed as 7a114f5 - e-web-app-utils: use LOG and g_warning instead of g_print