e-web-app-utils: use LOG and g_warning instead of g_print

https://bugzilla.gnome.org/show_bug.cgi?id=673348